:bug: Fix jei/rei & tags